<?xml version="1.0"?>
<package format="2">
  <name>tf_hacks</name>
  <version>0.0.1</version>
  <description>The tf_hacks package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

</package>
